fix(page): fixed page horizontal scroll

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,7 +1,6 @@
 .page {
   min-height: 100vh;
-  min-width: 100vw;
-  padding: 30vh 0 24px;
+  padding: 30vh 12px 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
